chore: update params from env file

--- a/_setup/example.env
+++ b/_setup/example.env
@@ -9,3 +9,4 @@ DB_USER_TEST=user
 DB_PASS_TEST=password
 GATEWAY_ENDPOINT=https://synk_gateway
 PUBLISHER_ENDPOINT=https://synk_publisher
+ROOT_CERTIFICATE_FILE_PATH=/cert/rootCA.pem
