--- a/_setup/example.env
+++ b/_setup/example.env
@@ -10,3 +10,4 @@ DB_PASS_TEST=password
 GATEWAY_ENDPOINT=https://synk_gateway
 PUBLISHER_ENDPOINT=https://synk_publisher
 ROOT_CERTIFICATE_FILE_PATH=/cert/rootCA.pem
+SENTRY_DSN=https://shsdauhsauhduashd
